--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
   
 before_install:
-  - docker build -t pratik1707/docker-react -f Dockerfile.dev . 
+  - docker build -t pratik1707/react -f Dockerfile.dev . 
 
 script:
-  - docker run pratik1707/docker-react npm run test -- -- coverage  
+  - docker run pratik1707/react npm run test -- -- coverage  
