--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t pratik1707/react -f Dockerfile.dev . 
 
 script:
-  - docker run pratik1707/react npm run test -- -- coverage  
+  - docker run -e CI=true pratik1707/react npm run test 
