--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,16 @@ before_install:
   - docker build -t pratik1707/react -f Dockerfile.dev . 
 
 script:
-  - docker run -e CI=true pratik1707/react npm run test  
+  - docker run -e CI=true pratik1707/react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "react"
+  env: "React-env"
+  bucket_name: "elasticbeanstalk-us-east-1-563316563773"
+  bucket_path: "react"
+  on: 
+    branch: master
+  
+    
