--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ deploy:
   bucket_name: "elasticbeanstalk-us-east-1-563316563773"
   bucket_path: "react"
   on: 
-    branch: master
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY  
   
     
